got arid of the annoying deprecation stuff