@@ -6,7 +6,7 @@ public class TargetTrackerSubsystem {
     public Supplier<Double> getDistanceFromTarget(){
         return new Supplier<Double>() {
             public Double get(){
-                return new Double(5.0);
+                return Double.valueOf(0.0);
             }
         };
     }
@@ -14,7 +14,7 @@ public class TargetTrackerSubsystem {
     public Supplier<Boolean> getATSeen(){
         return new Supplier<Boolean>() {
             public Boolean get(){
-                return new Boolean(true);
+                return Boolean.valueOf(true);
             }
         };
     }
